--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
     <link rel="stylesheet" href="css/my-style.css">
 
-    <title>Hello, world!</title>
+    <title>Re-Design Peruri</title>
   </head>
   <body>
     
